# MontCoin

./: .pre-commit-config.yaml  README.md  flake.nix  settings.gradle.kts
.github/workflows/: docker.yaml
admin/: .gitignore  README.md  config.ini  flake.nix  main.py  pyproject.toml  test.csv
admin/admin/: app.py  security.py
admin/admin/config/: api.py  config_file_builder.py  csv_reader.py  security.py
admin/admin/operation/: operation.py  repository.py
admin/admin/security/: http.py  security.py
admin/admin/tui/: tui.py
admin/admin/user/: repository.py  security.py  user.py
admin_cli/: users.py
android/: .gitignore
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: .env  .gitignore  README.md  app.py  compose.yml  config.ini  flake.nix  main.py  prod_config.ini  pyproject.toml
backend/backend/: app.py  main.py
backend/backend/configuration/: config.py  database.py  security.py
backend/backend/models/: database.py  operations.py  users.py
backend/backend/routers/: operations.py  users.py
backend/backend/schemas/: operations.py  security.py  users.py
backend/backend/security/: jwt.py  signing.py
backend/backend/services/: operations.py  timeservice.py  users.py
backend/configuration/: database.py  security.py
backend/models/: database.py  operations.py  users.py
backend/routers/: operations.py  users.py
backend/schemas/: common.py  operations.py  security.py  users.py
backend/security/: jwt.py  signing.py
backend/services/: operations.py  timeservice.py  users.py
certificates/: README.md
certificates/create_users/: private_key.pem
certificates/operations/: private_key.pem  public.crt
certificates/users/: public.crt
gradle/: libs.versions.toml
pos-terminal/: devshell.nix  settings.gradle.kts
pos-terminal/app/: build.gradle.kts
pos-terminal/gradle/: libs.versions.toml
pos-terminal/gradle/wrapper/: gradle-wrapper.properties
(+156 files in other folders)
