[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["Pablo Fraile Alonso <pablo@pablofraile.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
typer = "^0.12.3"
requests = "^2.32.3"
ntplib = "^0.4.0"

[tool.poetry.scripts]
admin = "admin.app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
