[tool.poetry]
name = "backend"
version = "0.1.0"
description = "MontCoin endpoints for moving money!"
authors = ["Pablo Fraile Alonso <pablo@pablofraile.net>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
ntplib = "^0.4.0"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
fastapi-pagination = "^0.12.25"

[tool.poetry.scripts]
api = "backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
